--- a/index.html
+++ b/index.html
@@ -24,16 +24,17 @@
   <!-- HEADER & NAV -->
   <section class="banner-with-header grid-center padded">
     <header class="absolute-header grid">
+      <img src="/images/about1.png">
       <div class="col-4-middle">
         <a href="/">
-          <h2 class="logo"> LOGO </h2>
+          <h2 class="logo"> Arrow Cafe </h2>
         </a>
       </div>
       <nav class="col-8-middle right">
-        <a href="#"> Link </a>
-        <a href="#"> Link </a>
-        <a href="#"> Link </a>
-        <a href="#"> Link </a>
+        <a href="#"> About </a>
+        <a href="#"> Merch </a>
+        <a href="#"> Gallery </a>
+        <a href="#"> Visit </a>
       </nav>
     </header>
     <div class="col-6_sm-12-middle centered">
