--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
 
   <!-- HEADER & NAV -->
   <section class="banner-with-header grid-center padded">
-    <header class="absolute-header grid">
-      <img src="/images/about1.png">
+    <header class="absolute-header grid" style="background-image:url('images/about1.jpg')">
       <div class="col-4-middle">
         <a href="/">
           <h2 class="logo"> Arrow Cafe </h2>
