--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 <body>
 
   <!-- HEADER & NAV -->
-  <section class="banner-with-header grid-center padded">
-    <header class="absolute-header grid" style="background-image:url('images/about1.jpg')">
+  <section class="banner-with-header grid-center padded" style="background-image:url('images/about1.jpg')">
+    <header class="absolute-header grid">
       <div class="col-4-middle">
         <a href="/">
           <h2 class="logo"> Arrow Cafe </h2>
