--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header class="absolute-header grid">
       <div class="col-4-middle">
         <a href="/">
-          <h2 class="logo"> Arrow Cafe </h2>
+          <img src="/images/logo1.png">
         </a>
       </div>
       <nav class="col-8-middle right">
