--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     <header class="absolute-header grid">
       <div class="col-4-middle">
         <a href="/">
-          <img src="/images/logo1.png">
+          <img src="/images/logo1.png" class="editable">
         </a>
       </div>
-      <nav class="col-8-middle right">
+      <nav class="col-8-middle right editable">
         <a href="#"> About </a>
         <a href="#"> Merch </a>
         <a href="#"> Gallery </a>
@@ -37,8 +37,8 @@
       </nav>
     </header>
     <div class="col-6_sm-12-middle centered">
-      <h2 class="big-bold"> This this a heading </h2>
-      <h3 class="not-bold"> This is a sub-heading </h3>
+      <h2 class="big-bold editable"> This this a heading </h2>
+      <h3 class="not-bold editable"> This is a sub-heading </h3>
     </div>
   </section>
 
