--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <a href="#"> Visit </a>
       </nav>
     </header>
-    <div class="col-6_sm-12-middle centered">
+    <div class="col-6_sm-12-middle centered editable">
       <h2 class="big-bold editable"> This this a heading </h2>
       <h3 class="not-bold editable"> This is a sub-heading </h3>
     </div>
