--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <title> Arrow Cafe NOLA </title>
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Noto+Sans+HK:300,400,500,700,900&display=swap" rel="stylesheet"></link>
-  <link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700&family=Sniglet:wght@400;800&display=swap" rel="stylesheet">
 
   <!-- Gridlex -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/gridlex/2.7.1/gridlex.min.css"></link>
@@ -16,8 +15,9 @@
   <!-- Magnific Popup for lightbox galleries   -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.css" />
 
-  <!-- our own custom stylesheet -->
-  <link rel="stylesheet" href="assets/style.css"/>
+  <!-- CUSTOM STYLE SHEET -->
+  <link rel="stylesheet" href="/assets/style.css"/>
+  <link rel="stylesheet" href="/assets/custom.css"/>
 </head>
 <body>
 
