--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 
   <!-- HEADER & NAV -->
-  <section class="banner-with-header grid-center padded" style="background-image:url('images/about1.jpg')">
+  <section class="banner-with-header grid-center padded" style="background-image:url('images/banner.jpg')">
     <header class="absolute-header grid">
       <div class="col-4-middle">
         <a href="/">
