--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
   <section class="banner-with-header grid-center padded" >
     <header class="absolute-header grid">
       <div class="col-4-middle">
-        <a href="/">
-          <img src="/images/logo1.png" class="editable">
+        <a href="/" class="logo">
         </a>
       </div>
       <nav class="col-8-middle right editable">
