--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
   <!-- HEADER & NAV -->
   <section class="banner-with-header grid-center padded" >
     <header class="absolute-header grid">
-      <div class="col-4-middle">
-        <a href="/" class="logo">
+      <div class="col-4-middle logo">
+        <a href="/">
         </a>
       </div>
       <nav class="col-8-middle right editable">
