--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <!-- HEADER & NAV -->
   <section class="banner-with-header grid-center padded" >
     <header class="absolute-header grid">
-      <div class="col-4-middle left editable">
+      <div class="col-4-middle left editable logo">
         <a href="/">
         </a>
       </div>
