--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <section class="banner-with-header grid-center padded" >
     <header class="absolute-header grid">
       <div class="col-4-middle left editable logo">
-        <a href="/">
+        <a href="/"><img src="images/logo2.png">
         </a>
       </div>
       <nav class="col-8-middle right editable">
