--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <!-- ABOUT SECTION -->
   <section class="padded">
     <div class="grid padded flex-flip">
-      <div class="col-5_sm-12 bg-image">
+      <div class="col-5_sm-12 about">
       </div>
       <div class="col-7_sm-12-middle padded">
         <h4 class="subtle-heading"> An experience awaits </h4>
@@ -60,7 +60,7 @@
         <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
         <a class="button" href="#"> Read More </a>
       </div>
-      <div class="col-5_sm-12 bg-image">
+      <div class="col-5_sm-12 coffee">
       </div>
     </div>
   </section>
