--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <a class="button" href="#"> Read More </a>
       </div>
     </div>
-    <div class="grid padded flex-flip">
+    <div class="grid padded">
       <div class="col-7_sm-12-middle padded">
         <h4 class="subtle-heading"> Adventure with me </h4>
         <h3> This this a heading </h3>
