--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <!-- HEADER & NAV -->
   <section class="banner-with-header grid-center padded" >
     <header class="absolute-header grid">
-      <div class="col-4-middle left editable logo">
+      <div class="col-4-middle left editable">
         <a href="/"><img src="images/logo2.png" width="100" height="200">
         </a>
       </div>
