--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
   <!-- HEADER & NAV -->
   <section class="banner-with-header grid-center padded" >
     <header class="absolute-header grid">
-      <div class="col-4-top left editable">
+      <div class="col-4 left editable">
         <a href="/"><img src="images/logo2.png" width="200">
         </a>
       </div>
-      <nav class="col-8-middle right editable">
+      <nav class="col-8 right editable">
         <a href="#"> About </a>
         <a href="#"> Merch </a>
         <a href="#"> Gallery </a>
