--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 
   <!-- HEADER & NAV -->
-  <section class="banner-with-header grid-center padded" >
+  <section class="banner-with-header grid-center banner-overlay padded" >
     <header class="absolute-header grid">
       <div class="col-4 left editable">
         <a href="/"><img src="images/logo2.png" width="200">
