--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 
   <!-- HEADER & NAV -->
-  <section class="banner-with-header grid-center banner-overlay padded" >
+  <section class="banner-with-header grid-center padded" >
     <header class="absolute-header grid">
       <div class="col-4 left editable">
         <a href="/"><img src="images/logo2.png" width="200">
@@ -36,37 +36,40 @@
       </nav>
     </header>
     <div class="col-6_sm-12-middle centered editable">
-      <h2 class="big-bold editable"> This this a heading </h2>
-      <h3 class="not-bold editable"> This is a sub-heading </h3>
+      <!-- <h2 class="big-bold editable"> This this a heading </h2>
+      <h3 class="not-bold editable"> This is a sub-heading </h3> -->
     </div>
   </section>
 
   <!-- ABOUT SECTION -->
-  <section class="padded">
-    <div class="grid padded flex-flip">
-      <div class="col-5_sm-12 about">
+  <section class="padded-1">
+    <div class="grid padded">
+      <div class="col-7_sm-12 about">
       </div>
-      <div class="col-7_sm-12-middle padded">
+      <div class="col-5_sm-12-middle padded">
         <h4 class="subtle-heading"> An experience awaits </h4>
         <h3> This this a heading </h3>
         <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-        <a class="button" href="#"> Read More </a>
+        <a class="button" href="#"> Support </a>
       </div>
     </div>
     <div class="grid padded">
-      <div class="col-7_sm-12-middle padded">
+      <div class="col-5_sm-12-middle padded">
         <h4 class="subtle-heading"> Adventure with me </h4>
         <h3> This this a heading </h3>
         <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
         <a class="button" href="#"> Read More </a>
       </div>
-      <div class="col-5_sm-12 coffee">
+      <div class="col-7_sm-12 coffee">
       </div>
     </div>
   </section>
 
   <!-- INSTA EMBED -->
-
+  <!-- LightWidget WIDGET -->
+  <section class="padded">
+  <script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/eaf69792afbb5d3bad99a2a26ae9ee36.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe>
+</section>
   <!-- MERCH w/BUTTONS -->
 
   <!-- ARTIST SPOTLIGHT -->
