--- a/index.html
+++ b/index.html
@@ -42,25 +42,25 @@
   </section>
 
   <!-- ABOUT SECTION -->
-  <section class="padded-1">
-    <div class="grid padded">
-      <div class="col-7_sm-12 about">
+  <section class="padded">
+    <div class="grid padded-1">
+      <div class="col-6_sm-12 about">
       </div>
-      <div class="col-5_sm-12-middle padded">
+      <div class="col-6_sm-12-middle padded">
         <h4 class="subtle-heading"> An experience awaits </h4>
         <h3> This this a heading </h3>
         <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
         <a class="button" href="#"> Support </a>
       </div>
     </div>
-    <div class="grid padded">
-      <div class="col-5_sm-12-middle padded">
+    <div class="grid padded-1">
+      <div class="col-6_sm-12-middle padded">
         <h4 class="subtle-heading"> Adventure with me </h4>
         <h3> This this a heading </h3>
         <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
         <a class="button" href="#"> Read More </a>
       </div>
-      <div class="col-7_sm-12 coffee">
+      <div class="col-6_sm-12 coffee">
       </div>
     </div>
   </section>
@@ -76,9 +76,9 @@
 
   <!-- FOOTER w/MAP & SOCIALS -->
   <section class="grid padded">
-    <div class="col-6_sm-12">
+    <div class="col-6_sm-12-middle">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3944.420342995598!2d115.12927631440583!3d-8.651511390396642!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd23879eae0a51f%3A0x6b09725f69f19992!2sThe+Shady+Shack!5e0!3m2!1sen!2sid!4v1560581894985!5m2!1sen!2sid"
-          width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+          width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
     <div class="col-6_sm-12-middle padded">
       <h2> Where to find us </h2>
