--- a/index.html
+++ b/index.html
@@ -66,10 +66,13 @@
   </section>
 
   <!-- INSTA EMBED -->
-  <!-- LightWidget WIDGET -->
-  <section class="padded">
-  <script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/eaf69792afbb5d3bad99a2a26ae9ee36.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe>
+
+<!-- SnapWidget -->
+<section class="padded">
+<script src="https://snapwidget.com/js/snapwidget.js"></script>
+<iframe src="https://snapwidget.com/embed/835013" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:100%; "></iframe>
 </section>
+
   <!-- MERCH w/BUTTONS -->
 
   <!-- ARTIST SPOTLIGHT -->
