--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title> Arrow Cafe NOLA </title>
 
@@ -7,7 +8,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700&family=Sniglet:wght@400;800&display=swap" rel="stylesheet">
 
   <!-- Gridlex -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/gridlex/2.7.1/gridlex.min.css"></link>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/gridlex/2.7.1/gridlex.min.css">
+  </link>
 
   <!-- Font Awesome Version 5 for Icons  -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.css" />
@@ -16,13 +18,14 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.css" />
 
   <!-- CUSTOM STYLE SHEET -->
-  <link rel="stylesheet" href="/assets/style.css"/>
-  <link rel="stylesheet" href="/assets/custom.css"/>
+  <link rel="stylesheet" href="/assets/style.css" />
+  <link rel="stylesheet" href="/assets/custom.css" />
 </head>
+
 <body>
 
   <!-- HEADER & NAV -->
-  <section class="banner-with-header grid-center padded" >
+  <section class="banner-with-header grid-center padded">
     <header class="absolute-header grid">
       <div class="col-4 left editable">
         <a href="/"><img src="images/logo2.png" width="200">
@@ -67,21 +70,46 @@
 
   <!-- INSTA EMBED -->
 
-<!-- SnapWidget -->
-<section class="padded">
-<script src="https://snapwidget.com/js/snapwidget.js"></script>
-<iframe src="https://snapwidget.com/embed/835013" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:100%; "></iframe>
-</section>
+  <!-- SnapWidget -->
+  <section class="padded-1">
+    <script src="https://snapwidget.com/js/snapwidget.js"></script>
+    <iframe src="https://snapwidget.com/embed/835013" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:100%; "></iframe>
+  </section>
 
   <!-- MERCH w/BUTTONS -->
+    <section class="padded-1 centered">
+      <h2> Our Services </h2>
+      <div class="grid padded-1">
+        <div class="col-4_sm-12 padded-1">
+          <img src="images/merch1.jpg" width="200">
+          </a>
+          <h4> Short Heading </h4>
+          <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+          <a class="button" href="#"> Buy </a>
+        </div>
+        <div class="col-4_sm-12 padded-1">
+          <img src="images/merch3.png" width="200">
+          <h4> Short Heading </h4>
+          <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <a class="button" href="#"> Buy </a>
+        </div>
+        <div class="col-4_sm-12 padded-1">
+          <img src="images/merch4.png" width="200">
+          <h4> Short Heading </h4>
+          <p>Irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+          <a class="button" href="#"> Buy </a>
+        </div>
+      </div>
+    </section>
 
   <!-- ARTIST SPOTLIGHT -->
 
   <!-- FOOTER w/MAP & SOCIALS -->
   <section class="grid padded">
     <div class="col-6_sm-12-middle">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3944.420342995598!2d115.12927631440583!3d-8.651511390396642!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd23879eae0a51f%3A0x6b09725f69f19992!2sThe+Shady+Shack!5e0!3m2!1sen!2sid!4v1560581894985!5m2!1sen!2sid"
-          width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3944.420342995598!2d115.12927631440583!3d-8.651511390396642!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd23879eae0a51f%3A0x6b09725f69f19992!2sThe+Shady+Shack!5e0!3m2!1sen!2sid!4v1560581894985!5m2!1sen!2sid"
+        width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
     <div class="col-6_sm-12-middle padded">
       <h2> Where to find us </h2>
@@ -105,4 +133,5 @@
 
 
 </body>
+
 </html>
