--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </section>
 
   <!-- ABOUT SECTION -->
-  <section class="padded">
+  <section class="padded-1">
     <div class="grid padded-1">
       <div class="col-6_sm-12 about">
       </div>
@@ -73,7 +73,7 @@
   <!-- SnapWidget -->
   <section class="padded-1">
     <script src="https://snapwidget.com/js/snapwidget.js"></script>
-    <iframe src="https://snapwidget.com/embed/835013" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:100%; "></iframe>
+    <iframe src="https://snapwidget.com/embed/835013" class="snapwidget-widget padded-1" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:100%; "></iframe>
   </section>
 
   <!-- MERCH w/BUTTONS -->
@@ -105,8 +105,8 @@
   <!-- ARTIST SPOTLIGHT -->
 
   <!-- FOOTER w/MAP & SOCIALS -->
-  <section class="grid padded">
-    <div class="col-6_sm-12-middle">
+  <section class="grid padded-1">
+    <div class="col-6_sm-12-middle padded-1">
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3944.420342995598!2d115.12927631440583!3d-8.651511390396642!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd23879eae0a51f%3A0x6b09725f69f19992!2sThe+Shady+Shack!5e0!3m2!1sen!2sid!4v1560581894985!5m2!1sen!2sid"
         width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
