--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
   </section>
 
   <!-- ABOUT SECTION -->
-  <section class="padded-1">
+  <section class="padded">
     <div class="grid padded-1">
       <div class="col-6_sm-12 about">
       </div>
-      <div class="col-6_sm-12-middle padded">
+      <div class="col-6_sm-12-middle padded-about">
         <h4 class="subtle-heading"> An experience awaits </h4>
         <h3> This this a heading </h3>
         <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
@@ -57,7 +57,7 @@
       </div>
     </div>
     <div class="grid padded-1">
-      <div class="col-6_sm-12-middle padded">
+      <div class="col-6_sm-12-middle padded-about">
         <h4 class="subtle-heading"> Adventure with me </h4>
         <h3> This this a heading </h3>
         <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
@@ -71,15 +71,15 @@
   <!-- INSTA EMBED -->
 
   <!-- SnapWidget -->
-  <section class="padded-1">
+  <section class="padded">
     <script src="https://snapwidget.com/js/snapwidget.js"></script>
     <iframe src="https://snapwidget.com/embed/835013" class="snapwidget-widget padded-1" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:100%; "></iframe>
   </section>
 
   <!-- MERCH w/BUTTONS -->
-    <section class="padded-1 centered">
+    <section class="padded centered">
       <h2> Our Services </h2>
-      <div class="grid padded-1">
+      <div class="grid">
         <div class="col-4_sm-12 padded-1">
           <img src="images/merch1.jpg" width="200">
           </a>
@@ -104,8 +104,22 @@
 
   <!-- ARTIST SPOTLIGHT -->
 
+  <section class="grid padded">
+<div class="col-12 padded-1 centered">
+  <img src="images/artists.png" width="750">
+</div>
+
+    <div class="col-4_sm-6_xs-12 padded-1">
+      <h2> This is a fascinating section </h2>
+    </div>
+    <div class="col-8_sm-6_xs-12 padded-1">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+      <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </div>
+  </section>
+
   <!-- FOOTER w/MAP & SOCIALS -->
-  <section class="grid padded-1">
+  <section class="grid padded">
     <div class="col-6_sm-12-middle padded-1">
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3944.420342995598!2d115.12927631440583!3d-8.651511390396642!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd23879eae0a51f%3A0x6b09725f69f19992!2sThe+Shady+Shack!5e0!3m2!1sen!2sid!4v1560581894985!5m2!1sen!2sid"
