--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <title> Arrow Cafe NOLA </title>
 
@@ -32,10 +31,10 @@
         </a>
       </div>
       <nav class="col-8 right editable">
-        <a href="#"> About </a>
-        <a href="#"> Merch </a>
-        <a href="#"> Gallery </a>
-        <a href="#"> Visit </a>
+        <a href="#about"> About </a>
+        <a href="#merch"> Merch </a>
+        <a href="#artists"> Gallery </a>
+        <a href="#visit"> Visit </a>
       </nav>
     </header>
     <div class="col-6_sm-12-middle centered editable">
@@ -45,7 +44,8 @@
   </section>
 
   <!-- ABOUT SECTION -->
-  <section class="padded">
+  <section class="padded" id="about">
+    <!-- ABOUT ARROW CAFE & IMAGE -->
     <div class="grid padded-1">
       <div class="col-6_sm-12 about">
       </div>
@@ -56,6 +56,8 @@
         <a class="button" href="#"> Support </a>
       </div>
     </div>
+
+    <!-- COFFEE AT ARROW & IMAGE -->
     <div class="grid padded-1">
       <div class="col-6_sm-12-middle padded-about">
         <h4 class="subtle-heading"> Adventure with me </h4>
@@ -69,7 +71,6 @@
   </section>
 
   <!-- INSTA EMBED -->
-
   <!-- SnapWidget -->
   <section class="padded">
     <script src="https://snapwidget.com/js/snapwidget.js"></script>
@@ -77,40 +78,40 @@
   </section>
 
   <!-- MERCH w/BUTTONS -->
-    <section class="padded centered">
-      <h2> Our Services </h2>
-      <div class="grid">
-        <div class="col-4_sm-12 padded-1">
-          <img src="images/merch1.jpg" width="200">
-          </a>
-          <h4> Short Heading </h4>
-          <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
-          <a class="button" href="#"> Buy </a>
-        </div>
-        <div class="col-4_sm-12 padded-1">
-          <img src="images/merch3.png" width="200">
-          <h4> Short Heading </h4>
-          <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <a class="button" href="#"> Buy </a>
-        </div>
-        <div class="col-4_sm-12 padded-1">
-          <img src="images/merch4.png" width="200">
-          <h4> Short Heading </h4>
-          <p>Irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-          <a class="button" href="#"> Buy </a>
-        </div>
+  <section class="padded centered" id="merch">
+    <h2> Arrow Merch </h2>
+    <div class="grid">
+      <div class="col-4_sm-12 padded-1">
+        <img src="images/merch1.jpg" width="250">
+        </a>
+        <h4> Short Heading </h4>
+        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+        <a class="button" href="#"> Buy </a>
       </div>
-    </section>
+      <div class="col-4_sm-12 padded-1">
+        <img src="images/merch3.png" width="250">
+        <h4> Short Heading </h4>
+        <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <a class="button" href="#"> Buy </a>
+      </div>
+      <div class="col-4_sm-12 padded-1">
+        <img src="images/merch4.png" width="250">
+        <h4> Short Heading </h4>
+        <p>Irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+        <a class="button" href="#"> Buy </a>
+      </div>
+    </div>
+  </section>
 
   <!-- ARTIST SPOTLIGHT -->
-
-  <section class="grid padded">
-<div class="col-12 padded-1 centered">
-  <img src="images/artists.png" width="750">
-</div>
-
+  <!-- IMAGE OF ARTWORK -->
+  <section class="grid padded" id="artists">
+    <div class="col-12 padded-1 centered">
+      <img src="images/artists.png" width="700">
+    </div>
+    <!-- INORMATION ON ARTIST SPOTLIGHT / GALLERY -->
     <div class="col-4_sm-6_xs-12 padded-1">
-      <h2> This is a fascinating section </h2>
+      <h2> Artists at Arrow </h2>
     </div>
     <div class="col-8_sm-6_xs-12 padded-1">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
@@ -119,18 +120,20 @@
   </section>
 
   <!-- FOOTER w/MAP & SOCIALS -->
-  <section class="grid padded">
+  <section class="grid padded" id="visit">
+    <!-- GOOGLE MAP -->
     <div class="col-6_sm-12-middle padded-1">
-      <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3944.420342995598!2d115.12927631440583!3d-8.651511390396642!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd23879eae0a51f%3A0x6b09725f69f19992!2sThe+Shady+Shack!5e0!3m2!1sen!2sid!4v1560581894985!5m2!1sen!2sid"
-        width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13826.691885613254!2d-90.0685139!3d29.9600839!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7b9ecc26045ee330!2sArrow%20Cafe!5e0!3m2!1sen!2sus!4v1591370772651!5m2!1sen!2sus"
+        width="475" height="350" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
     </div>
+    <!-- CONTACT INFO -->
     <div class="col-6_sm-12-middle padded">
-      <h2> Where to find us </h2>
+      <h2> Visit Us </h2>
       <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       <p> <strong> Email: </strong> hello@company.com </p>
       <p> <strong> Phone: </strong> 0412 555 555 </p>
-      <p> <strong> Facebook: </strong> fb.com/companyname </p>
+
+      <!-- SOCIAL/EMAIL ICONS -->
       <nav class="inline socials">
         <a href="#">
           <i class="fab fa-facebook-square"></i>
@@ -139,13 +142,10 @@
           <i class="fab fa-instagram"></i>
         </a>
         <a href="#">
-          <i class="fab fa-youtube"></i>
+          <i class="far fa-envelope"></i>
         </a>
       </nav>
     </div>
   </section>
-
-
 </body>
-
 </html>
