--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <nav class="col-8 right editable">
         <a href="#about"> About </a>
         <a href="#merch"> Merch </a>
-        <a href="#artists"> Gallery </a>
+        <a href="#artists"> Exhibits </a>
         <a href="#visit"> Visit </a>
       </nav>
     </header>
@@ -50,8 +50,8 @@
       <div class="col-6_sm-12 about">
       </div>
       <div class="col-6_sm-12-middle padded-about">
-        <h4 class="subtle-heading"> An experience awaits </h4>
-        <h3> This this a heading </h3>
+        <h4 class="subtle-heading"> a place for community</h4>
+        <h3> About Arrow Cafe </h3>
         <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
         <a class="button" href="#"> Support </a>
       </div>
@@ -60,8 +60,8 @@
     <!-- COFFEE AT ARROW & IMAGE -->
     <div class="grid padded-1">
       <div class="col-6_sm-12-middle padded-about">
-        <h4 class="subtle-heading"> Adventure with me </h4>
-        <h3> This this a heading </h3>
+        <h4 class="subtle-heading"> Only the best for you </h4>
+        <h3> Our Coffee </h3>
         <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
         <a class="button" href="#"> Read More </a>
       </div>
@@ -110,10 +110,12 @@
       <img src="images/artists.png" width="700">
     </div>
     <!-- INORMATION ON ARTIST SPOTLIGHT / GALLERY -->
-    <div class="col-4_sm-6_xs-12 padded-1">
-      <h2> Artists at Arrow </h2>
+    <div class="col-3_sm-6_xs-12 padded-1">
+      <h2> Arrow Cafe Presents: </h2>
     </div>
-    <div class="col-8_sm-6_xs-12 padded-1">
+    <div class="col-9_sm-6_xs-12 padded-1">
+      <h3>Natalie Blanton an Art Show</h3>
+      <h4>March 1 - May 30</h4>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
       <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
