--- a/index.html
+++ b/index.html
@@ -23,25 +23,38 @@
 
 <body>
 
-  <!-- HEADER & NAV -->
-  <section class="banner-with-header grid-center padded">
-    <header class="absolute-header grid">
-      <div class="col-4 left editable">
-        <a href="/"><img src="images/logo2.png" width="200">
-        </a>
-      </div>
-      <nav class="col-8 right editable">
-        <a href="#about"> About </a>
-        <a href="#merch"> Merch </a>
-        <a href="#artists"> Exhibits </a>
-        <a href="#visit"> Visit </a>
-      </nav>
-    </header>
-    <div class="col-6_sm-12-middle centered editable">
-      <!-- <h2 class="big-bold editable"> This this a heading </h2>
-      <h3 class="not-bold editable"> This is a sub-heading </h3> -->
+  <!-- HEADER -->
+
+  <!-- NAV -->
+  <header class="grid-center fixed">
+    <nav class="col-4-middle right">
+      <a href="#about"> About </a>
+      <a href="#merch"> Merch </a>
+    </nav>
+    <div class="col-2-middle centered">
+      <a href="/">
+        <h2 class="logo"> <div class="col-4-midddle centered editable">
+          <a href="/"><img src="images/logo2.png" width="120">
+          </a>
+        </div> </h2>
+      </a>
+    </div>
+    <nav class="col-4-middle">
+      <a href="#artists"> Exhibits </a>
+      <a href="#vist"> Vist </a>
+    </nav>
+  </header>
+
+  <section class="grid header-offset"></section>
+
+  <!-- IMAGE BANNER -->
+  <section class="banner grid-center">
+    <div class="col-6-middle centered">
+      <!-- <h2 class="big-bold"> This this a heading </h2>
+      <h3 class="not-bold"> This is a sub-heading </h3> -->
     </div>
   </section>
+
 
   <!-- ABOUT SECTION -->
   <section class="padded" id="about">
@@ -50,7 +63,7 @@
       <div class="col-6_sm-12 about">
       </div>
       <div class="col-6_sm-12-middle padded-about">
-        <h4 class="subtle-heading"> a place for community</h4>
+        <!-- <h4 class="subtle-heading"> a place for community</h4> -->
         <h3> About Arrow Cafe </h3>
         <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
         <a class="button" href="#"> Support </a>
@@ -60,10 +73,10 @@
     <!-- COFFEE AT ARROW & IMAGE -->
     <div class="grid padded-1">
       <div class="col-6_sm-12-middle padded-about">
-        <h4 class="subtle-heading"> Only the best for you </h4>
+        <!-- <h4 class="subtle-heading"> Only the best for you </h4> -->
         <h3> Our Coffee </h3>
         <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-        <a class="button" href="#"> Read More </a>
+        <a class="button" href="#"> Our Menu </a>
       </div>
       <div class="col-6_sm-12 coffee">
       </div>
@@ -71,10 +84,12 @@
   </section>
 
   <!-- INSTA EMBED -->
-  <!-- SnapWidget -->
   <section class="padded">
+
+    <!-- SnapWidget -->
     <script src="https://snapwidget.com/js/snapwidget.js"></script>
-    <iframe src="https://snapwidget.com/embed/835013" class="snapwidget-widget padded-1" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:100%; "></iframe>
+    <iframe src="https://snapwidget.com/embed/835013" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:100%; "></iframe>
+
   </section>
 
   <!-- MERCH w/BUTTONS -->
@@ -97,7 +112,7 @@
       <div class="col-4_sm-12 padded-1">
         <img src="images/merch4.png" width="250">
         <h4> Short Heading </h4>
-        <p>Irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+        <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         <a class="button" href="#"> Buy </a>
       </div>
     </div>
