--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="col-2-middle centered">
       <a href="/">
         <h2 class="logo"> <div class="col-4-midddle centered editable">
-          <a href="/"><img src="images/logo2.png" width="120">
+          <a href="/"><img src="images/logo2.png" width="150">
           </a>
         </div> </h2>
       </a>
@@ -64,7 +64,7 @@
       </div>
       <div class="col-6_sm-12-middle padded-about">
         <!-- <h4 class="subtle-heading"> a place for community</h4> -->
-        <h3> About Arrow Cafe </h3>
+        <h2> About Arrow Cafe </h2>
         <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
         <a class="button" href="#"> Support </a>
       </div>
@@ -74,7 +74,7 @@
     <div class="grid padded-1">
       <div class="col-6_sm-12-middle padded-about">
         <!-- <h4 class="subtle-heading"> Only the best for you </h4> -->
-        <h3> Our Coffee </h3>
+        <h2> Our Coffee </h2>
         <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
         <a class="button" href="#"> Our Menu </a>
       </div>
@@ -137,7 +137,7 @@
   </section>
 
   <!-- FOOTER w/MAP & SOCIALS -->
-  <section class="grid padded" id="visit">
+  <footer class="grid padded" id="visit">
     <!-- GOOGLE MAP -->
     <div class="col-6_sm-12-middle padded-1">
       <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13826.691885613254!2d-90.0685139!3d29.9600839!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7b9ecc26045ee330!2sArrow%20Cafe!5e0!3m2!1sen!2sus!4v1591370772651!5m2!1sen!2sus"
@@ -147,7 +147,7 @@
     <div class="col-6_sm-12-middle padded">
       <h2> Visit Us </h2>
       <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-      <p> <strong> Email: </strong> hello@company.com </p>
+      <p> <strong> Address: </strong> 628 N Rampart St, New Orleans, LA 70112 </p>
       <p> <strong> Phone: </strong> 0412 555 555 </p>
 
       <!-- SOCIAL/EMAIL ICONS -->
@@ -163,6 +163,6 @@
         </a>
       </nav>
     </div>
-  </section>
+  </footer
 </body>
 </html>
