--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <img src="images/merch1.jpg" width="250">
         </a>
         <h4> Short Heading </h4>
-        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+        <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
         <a class="button" href="#"> Buy </a>
       </div>
       <div class="col-4_sm-12 padded-1">
@@ -120,15 +120,15 @@
 
   <!-- ARTIST SPOTLIGHT -->
   <!-- IMAGE OF ARTWORK -->
-  <section class="grid padded" id="artists">
-    <div class="col-12 padded-1 centered">
+  <section class="grid padded-1" id="artists">
+    <div class="col-12  centered">
       <img src="images/artists.png" width="700">
     </div>
     <!-- INORMATION ON ARTIST SPOTLIGHT / GALLERY -->
-    <div class="col-3_sm-6_xs-12 padded-1">
+    <div class="col-3_sm-6_xs-12-top padded">
       <h2> Arrow Cafe Presents: </h2>
     </div>
-    <div class="col-9_sm-6_xs-12 padded-1">
+    <div class="col-9_sm-6_xs-12 padded">
       <h3>Natalie Blanton an Art Show</h3>
       <h4>March 1 - May 30</h4>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
