editables and links

--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
       </div>
       <div class="col-6_sm-12-middle padded-about">
         <!-- <h4 class="subtle-heading"> a place for community</h4> -->
-        <h2> About Arrow Cafe </h2>
-        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-        <a class="button" href="#"> Support </a>
+        <h2 class="editable"> About Arrow Cafe </h2>
+        <p class="editable"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+        <a class="button editable" href="#"> Support </a>
       </div>
     </div>
 
@@ -74,8 +74,8 @@
     <div class="grid padded-1">
       <div class="col-6_sm-12-middle padded-about">
         <!-- <h4 class="subtle-heading"> Only the best for you </h4> -->
-        <h2> Our Coffee </h2>
-        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+        <h2 class="editable"> Our Coffee </h2>
+        <p class="editable"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
         <a class="button" href="#"> Our Menu </a>
       </div>
       <div class="col-6_sm-12 coffee">
@@ -84,7 +84,7 @@
   </section>
 
   <!-- INSTA EMBED -->
-  <section class="padded">
+  <section class="padded editable">
 
     <!-- SnapWidget -->
     <script src="https://snapwidget.com/js/snapwidget.js"></script>
@@ -94,25 +94,25 @@
 
   <!-- MERCH w/BUTTONS -->
   <section class="padded centered" id="merch">
-    <h2> Arrow Merch </h2>
+    <h2 class="editable"> Arrow Merch </h2>
     <div class="grid">
       <div class="col-4_sm-12 padded-1">
         <img src="images/merch1.jpg" width="250">
         </a>
-        <h4> Short Heading </h4>
-        <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+        <h4 class="editable"> Short Heading </h4>
+        <p class="editable">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
         <a class="button" href="#"> Buy </a>
       </div>
       <div class="col-4_sm-12 padded-1">
         <img src="images/merch3.png" width="250">
-        <h4> Short Heading </h4>
-        <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <h4 class="editable"> Short Heading </h4>
+        <p class="editable">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         <a class="button" href="#"> Buy </a>
       </div>
       <div class="col-4_sm-12 padded-1">
         <img src="images/merch4.png" width="250">
-        <h4> Short Heading </h4>
-        <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <h4 class="editable"> Short Heading </h4>
+        <p class="editable">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         <a class="button" href="#"> Buy </a>
       </div>
     </div>
@@ -121,17 +121,17 @@
   <!-- ARTIST SPOTLIGHT -->
   <!-- IMAGE OF ARTWORK -->
   <section class="grid padded-1" id="artists">
-    <div class="col-12  centered">
+    <div class="col-12 editable centered">
       <img src="images/artists.png" width="700">
     </div>
     <!-- INORMATION ON ARTIST SPOTLIGHT / GALLERY -->
     <div class="col-3_sm-6_xs-12-top padded">
-      <h2> Arrow Cafe Presents: </h2>
+      <h2 class="editable"> Arrow Cafe Presents: </h2>
     </div>
     <div class="col-9_sm-6_xs-12 padded">
-      <h3>Natalie Blanton an Art Show</h3>
-      <h4>March 1 - May 30</h4>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+      <h3 class="editable">Natalie Blanton an Art Show</h3>
+      <h4 class="editable">March 1 - May 30</h4>
+      <p class="editable">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
       <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
   </section>
@@ -145,10 +145,10 @@
     </div>
     <!-- CONTACT INFO -->
     <div class="col-6_sm-12-middle padded">
-      <h2> Visit Us </h2>
-      <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-      <p> <strong> Address: </strong> 628 N Rampart St, New Orleans, LA 70112 </p>
-      <p> <strong> Phone: </strong> 0412 555 555 </p>
+      <h2 class="editable"> Visit Us </h2>
+      <p class="editable"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <p class="editable"> <strong> Address: </strong> 628 N Rampart St, New Orleans, LA 70112 </p>
+      <p class="editable"> <strong> Phone: </strong> 0412 555 555 </p>
 
       <!-- SOCIAL/EMAIL ICONS -->
       <nav class="inline socials">
