--- a/index.html
+++ b/index.html
@@ -152,10 +152,10 @@
 
       <!-- SOCIAL/EMAIL ICONS -->
       <nav class="inline socials">
-        <a href="#">
+        <a href="https://www.facebook.com/arrowcafenola/" target="_blank">
           <i class="fab fa-facebook-square"></i>
         </a>
-        <a href="#">
+        <a href="https://www.instagram.com/arrowcafe/?hl=en" target="_blank">
           <i class="fab fa-instagram"></i>
         </a>
         <a href="#">
