--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@
     <!-- GOOGLE MAP -->
     <div class="col-6_sm-12-middle padded-1">
       <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13826.691885613254!2d-90.0685139!3d29.9600839!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7b9ecc26045ee330!2sArrow%20Cafe!5e0!3m2!1sen!2sus!4v1591370772651!5m2!1sen!2sus"
-        width="475" height="350" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        width="550" height="350" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
     </div>
     <!-- CONTACT INFO -->
-    <div class="col-6_sm-12-middle padded">
+    <div class="col-6_sm-12-middle padded-1">
       <h2 class="editable"> Visit Us </h2>
       <p class="editable"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       <p class="editable"> <strong> Address: </strong> 628 N Rampart St, New Orleans, LA 70112 </p>
