--- a/index.html
+++ b/index.html
@@ -14,13 +14,16 @@ layout: default
        <div class="burger-menu">
         <ul>
           <li>
-            <a href="#">Home</a>
+            <a href="#">About</a>
           </li>
           <li>
-            <a href="#">Food</a>
+            <a href="#">Merch</a>
           </li>
           <li>
-            <a href="#" class="on-page">Drink</a>
+            <a href="#" class="on-page">Exhibits</a>
+          </li>
+          <li>
+            <a href="#" class="on-page">Visit</a>
           </li>
         <ul>
       </div>
