--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@ layout: default
        <div class="burger-menu">
         <ul>
           <li>
-            <a href="#">About</a>
+            <a href="#about">About</a>
           </li>
           <li>
-            <a href="#">Merch</a>
+            <a href="#merch">Merch</a>
           </li>
           <li>
-            <a href="#" class="on-page">Exhibits</a>
+            <a href="#artists" class="on-page">Exhibits</a>
           </li>
           <li>
-            <a href="#" class="on-page">Visit</a>
+            <a href="#visit" class="on-page">Visit</a>
           </li>
         <ul>
       </div>
@@ -61,10 +61,10 @@ layout: default
 
 
   <!-- ABOUT SECTION -->
-  <section class="padded" id="about">
+  <section class="padded">
     <!-- ABOUT ARROW CAFE & IMAGE -->
     <div class="grid padded-1">
-      <div class="col-6_sm-12 about">
+      <div class="col-6_sm-12 about" id="about">
       </div>
       <div class="col-6_sm-12-middle padded-about">
         <!-- <h4 class="subtle-heading"> a place for community</h4> -->
