--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ layout: default
     </nav>
 
   <!-- NAV -->
-  <header class="grid-center fixed">
+  <!-- <header class="grid-center fixed mob-hide">
     <nav class="col-4-middle right">
       <a href="#about"> About </a>
       <a href="#merch"> Merch </a>
@@ -47,24 +47,29 @@ layout: default
       <a href="#artists"> Exhibits </a>
       <a href="#vist"> Vist </a>
     </nav>
+  </header> -->
+
+  <header class="banner grid-center padded">
+    <div class= "layer centered"> <img class"grid-center" src="images/logo4.png" width="20%">
+    </div>
   </header>
 
   <!-- <section class="grid header-offset"></section> -->
 
   <!-- IMAGE BANNER -->
-  <section class="banner grid-center padded">
-    <div class="col-6-middle centered">
+  <!-- <section class="banner grid-center padded">
+    <div class="col-6-middle centered"> -->
       <!-- <h2 class="big-bold"> This this a heading </h2>
       <h3 class="not-bold"> This is a sub-heading </h3> -->
-    </div>
-  </section>
+    <!-- </div>
+  </section> -->
 
 
   <!-- ABOUT SECTION -->
   <section class="padded">
     <!-- ABOUT ARROW CAFE & IMAGE -->
     <div class="grid padded-1">
-      <div class="col-6_sm-12 about" id="about">
+      <div class="col-6_sm-12 about" id="about"> <img src="images/about1.jpg" width="100%">
       </div>
       <div class="col-6_sm-12-middle padded-about">
         <!-- <h4 class="subtle-heading"> a place for community</h4> -->
@@ -82,7 +87,7 @@ layout: default
         <p class="editable"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
         <a class="button" href="#"> Our Menu </a>
       </div>
-      <div class="col-6_sm-12 coffee">
+      <div class="col-6_sm-12"><img src="images/coffee1.png" width="100%">
       </div>
     </div>
   </section>
@@ -126,7 +131,7 @@ layout: default
   <!-- IMAGE OF ARTWORK -->
   <section class="grid padded-1" id="artists">
     <div class="col-12 editable centered">
-      <img src="images/artists.png" width="700">
+      <img src="images/artists.png" width="60%">
     </div>
     <!-- INORMATION ON ARTIST SPOTLIGHT / GALLERY -->
     <div class="col-3_sm-6_xs-12-top padded">
@@ -145,7 +150,7 @@ layout: default
     <!-- GOOGLE MAP -->
     <div class="col-6_sm-12-middle padded-1">
       <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13826.691885613254!2d-90.0685139!3d29.9600839!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7b9ecc26045ee330!2sArrow%20Cafe!5e0!3m2!1sen!2sus!4v1591370772651!5m2!1sen!2sus"
-        width="550" height="350" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        width="100%" height="350" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
     </div>
     <!-- CONTACT INFO -->
     <div class="col-6_sm-12-middle padded-1">
