--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@ layout: default
   </header> -->
 
   <header class="banner grid-center padded">
-    <div class= "layer centered"> <img class"grid-center" src="images/logo4.png" width="20%">
+    <div class= "layer centered">
+      <!-- <div class="logo">
+    </div> -->
+      <img class"grid-center-middle" src="images/logo4.png" style="height:15rem;" >
     </div>
   </header>
 
