--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ layout: default
     <div class= "layer centered">
       <!-- <div class="logo">
     </div> -->
-      <img class"grid-center-middle" src="images/logo4.png" style="height:18rem;" >
+      <img class"grid-center-middle phonelogo" src="images/logo4.png" style="height:18rem;" >
     </div>
   </header>
 
@@ -88,7 +88,7 @@ layout: default
         <!-- <h4 class="subtle-heading"> Only the best for you </h4> -->
         <h2 class="editable"> Our Coffee </h2>
         <p class="editable"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-        <a class="button" href="#"> Our Menu </a>
+        <a class="button" href="#"> Menu </a>
       </div>
       <div class="col-6_sm-12"><img src="images/coffee1.png" width="100%">
       </div>
@@ -134,7 +134,7 @@ layout: default
   <!-- IMAGE OF ARTWORK -->
   <section class="grid padded-1" id="artists">
     <div class="col-12 editable centered">
-      <img src="images/artists.png" width="60%">
+      <img src="images/artists.png" width="70%">
     </div>
     <!-- INORMATION ON ARTIST SPOTLIGHT / GALLERY -->
     <div class="col-3_sm-6_xs-12-top padded">
