--- a/index.html
+++ b/index.html
@@ -11,61 +11,32 @@ layout: default
           <span class="burger-middle"></span>
           <span class="burger-bottom"></span>
       </div>
-       <div class="burger-menu">
+       <div class="burger-menu editable">
         <ul>
           <li>
-            <a href="#about">About</a>
+            <a href="#about" class ="editable">About</a>
           </li>
           <li>
-            <a href="#merch">Merch</a>
+            <a href="#merch" class ="editable">Merch</a>
           </li>
           <li>
-            <a href="#artists" class="on-page">Exhibits</a>
+            <a href="#artists" class="on-page ediable">Exhibits</a>
           </li>
           <li>
-            <a href="#visit" class="on-page">Visit</a>
+            <a href="#visit" class="on-page editable">Visit</a>
           </li>
         <ul>
       </div>
     </nav>
 
-  <!-- NAV -->
-  <!-- <header class="grid-center fixed mob-hide">
-    <nav class="col-4-middle right">
-      <a href="#about"> About </a>
-      <a href="#merch"> Merch </a>
-    </nav>
-    <div class="col-4-middle centered">
-      <a href="/">
-        <h2 class="logo"> <div class="col-4-midddle centered editable">
-          <a href="/"><img src="images/logo3.png" width="300">
-          </a>
-        </div> </h2>
-      </a>
-    </div>
-    <nav class="col-4-middle">
-      <a href="#artists"> Exhibits </a>
-      <a href="#vist"> Vist </a>
-    </nav>
-  </header> -->
-
-  <header class="banner grid-center padded">
+<!-- BANNER & LOGO -->
+  <header class="banner grid-center padded editable">
     <div class= "layer centered">
       <!-- <div class="logo">
     </div> -->
-      <img class"grid-center-middle phonelogo" src="images/logo4.png" style="height:18rem;" >
+      <img class"grid-center-middle phonelogo editable" src="images/logo4.png" style="height:18rem;" >
     </div>
   </header>
-
-  <!-- <section class="grid header-offset"></section> -->
-
-  <!-- IMAGE BANNER -->
-  <!-- <section class="banner grid-center padded">
-    <div class="col-6-middle centered"> -->
-      <!-- <h2 class="big-bold"> This this a heading </h2>
-      <h3 class="not-bold"> This is a sub-heading </h3> -->
-    <!-- </div>
-  </section> -->
 
 
   <!-- ABOUT SECTION -->
@@ -96,7 +67,7 @@ layout: default
   </section>
 
   <!-- INSTA EMBED -->
-  <section class="padded editable">
+  <section class="padded">
 
     <!-- SnapWidget -->
     <script src="https://snapwidget.com/js/snapwidget.js"></script>
@@ -113,19 +84,19 @@ layout: default
         </a>
         <h4 class="editable"> Short Heading </h4>
         <p class="editable">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-        <a class="button" href="#"> Buy </a>
+        <a class="button editable" href="#"> Buy </a>
       </div>
       <div class="col-4_sm-12 padded-1">
         <img src="images/merch3.png" width="250">
         <h4 class="editable"> Short Heading </h4>
         <p class="editable">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <a class="button" href="#"> Buy </a>
+        <a class="button editable" href="#"> Buy </a>
       </div>
       <div class="col-4_sm-12 padded-1">
         <img src="images/merch4.png" width="250">
         <h4 class="editable"> Short Heading </h4>
         <p class="editable">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <a class="button" href="#"> Buy </a>
+        <a class="button editable" href="#"> Buy </a>
       </div>
     </div>
   </section>
@@ -143,8 +114,9 @@ layout: default
     <div class="col-9_sm-6_xs-12 padded">
       <h3 class="editable">Natalie Blanton an Art Show</h3>
       <h4 class="editable">March 1 - May 30</h4>
-      <p class="editable">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-      <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p class="editable">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      <br> <br>
+      Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
   </section>
 
@@ -164,13 +136,13 @@ layout: default
 
       <!-- SOCIAL/EMAIL ICONS -->
       <nav class="inline socials">
-        <a href="https://www.facebook.com/arrowcafenola/" target="_blank">
+        <a href="https://www.facebook.com/arrowcafenola/" class ="editable" target="_blank">
           <i class="fab fa-facebook-square"></i>
         </a>
-        <a href="https://www.instagram.com/arrowcafe/?hl=en" target="_blank">
+        <a href="https://www.instagram.com/arrowcafe/?hl=en" class ="editable" target="_blank">
           <i class="fab fa-instagram"></i>
         </a>
-        <a href="#">
+        <a href="#" class ="editable">
           <i class="far fa-envelope"></i>
         </a>
       </nav>
