--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ layout: default
     <div class= "layer centered">
       <!-- <div class="logo">
     </div> -->
-      <img class"grid-center-middle phonelogo editable" src="images/logo4.png" style="height:18rem;" >
+      <img class"grid-center-middle phonelogo" src="images/logo4.png" style="height:18rem;" >
     </div>
   </header>
 
