--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ layout: default
     </nav>
 
 <!-- BANNER & LOGO -->
-  <header class="banner grid-center padded editable">
+  <header class="banner grid-center padded">
     <div class="layer centered">
       <!-- <div class="logo">
     </div> -->
